fix select border with scrollbar

--- a/frontend/src/assets/style.css
+++ b/frontend/src/assets/style.css
@@ -14,3 +14,11 @@
     font-size: medium;
   }
 }
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none; 
+}
